endpoint can be called from frontend
